// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing on <GifExpertApp /> should render properly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`Testing on <GifExpertApp /> should show a categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="One punch"
    key="0"
  />
  <GifGrid
    category="Kimetsu no Yaiba"
    key="1"
  />
</Fragment>
`;
